cabal-version: 2.4
name:          Haskelloids
version:       0.1.1
synopsis:      A reproduction of the Atari 1979 classic "Asteroids"
homepage:      https://github.com/keera-studios/Haskelloids
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matthew Hayden
maintainer:    mrehayden@googlemail.com
stability:     Alpha
category:      Game
build-type:    Simple

executable Haskelloids
  hs-source-dirs:   src
  other-modules:
    Data.IdentityList
    Haskelloids.Geometry
    Haskelloids.Geometry.Text
    Haskelloids.Graphics
    Haskelloids.Input
    Haskelloids.Object
    Haskelloids.Object.Asteroid
    Haskelloids.Object.Bullet
    Haskelloids.Object.Dust
    Haskelloids.Object.Ship

  main-is:          Haskelloids.hs
  build-depends:
    , base         >=4.12 && <4.14
    , containers
    , HGL          ^>=3.2
    , matrix       ^>=0.3
    , MonadRandom  ^>=0.5
    , random       ^>=1.1
    , vector
    , Yampa        ^>=0.13

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/keera-studios/Haskelloids.git
