cabal-version: 2.4
name:          Haskelloids
version:       0.1.1
synopsis:      A reproduction of the Atari 1979 classic "Asteroids"
homepage:      https://github.com/keera-studios/Haskelloids
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matthew Hayden
maintainer:    mrehayden@googlemail.com
stability:     Alpha
category:      Game
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.3 || ==8.10.1

executable Haskelloids
  hs-source-dirs:   src
  other-modules:
    Data.IdentityList
    Haskelloids.Geometry
    Haskelloids.Geometry.Text
    Haskelloids.Graphics
    Haskelloids.Input
    Haskelloids.Object
    Haskelloids.Object.Asteroid
    Haskelloids.Object.Bullet
    Haskelloids.Object.Dust
    Haskelloids.Object.Ship
    Paths_Haskelloids

  main-is:          Haskelloids.hs
  build-depends:
    , base         >=4.12 && <4.15
    , containers   ^>=0.6
    , HGL          ^>=3.2
    , matrix       ^>=0.3
    , MonadRandom  ^>=0.5
    , random       ^>=1.1
    , vector       ^>=0.12
    , Yampa        ^>=0.13

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/keera-studios/Haskelloids.git
