cabal-version: 2.4
name:          Haskelloids
version:       0.1.1
synopsis:      A reproduction of the Atari 1979 classic "Asteroids"
homepage:      https://github.com/keera-studios/Haskelloids
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matthew Hayden
maintainer:    mrehayden@googlemail.com
stability:     Alpha
category:      Game
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.4 || ==8.10.3

source-repository head
  type:     git
  location: https://github.com/keera-studios/Haskelloids.git

common common
  build-depends:
    , base         >=4.12 && <4.15
    , HGL          ^>=3.2
    , MonadRandom  ^>=0.5
    , Yampa        ^>=0.13

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , containers  ^>=0.6
    , matrix      ^>=0.3
    , vector      ^>=0.12

  -- cabal-fmt: expand src
  exposed-modules:
    Data.IdentityList
    Haskelloids.Geometry
    Haskelloids.Geometry.Text
    Haskelloids.Graphics
    Haskelloids.Input
    Haskelloids.Object
    Haskelloids.Object.Asteroid
    Haskelloids.Object.Bullet
    Haskelloids.Object.Dust
    Haskelloids.Object.Ship
    Paths_Haskelloids

executable Haskelloids
  import:        common
  main-is:       app/Haskelloids.hs
  build-depends:
    , Haskelloids
    , random       >=1.1 && <1.3

  other-modules: Paths_Haskelloids
  ghc-options:   -O2
